--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -211,6 +211,9 @@
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglfreetype.cpp">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglfont.cpp">
+      <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -399,11 +402,14 @@
     <ClInclude Include="src\FlexEngine\FlexMath\matrix3x3.h">
       <Filter>src\FlexEngine\FlexMath</Filter>
     </ClInclude>
-    <ClInclude Include="openglfreetype.h">
-      <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
-    </ClInclude>
     <ClInclude Include="src\FlexEngine\Renderer\alphabetstorage.h">
       <Filter>src\FlexEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglfreetype.h">
+      <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglfont.h">
+      <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
