--- a/MicroChess/MicroChess.vcxproj
+++ b/MicroChess/MicroChess.vcxproj
@@ -143,6 +143,8 @@
   <ItemGroup>
     <None Include="assets\shaders\batch2.0.frag" />
     <None Include="assets\shaders\batch2.0.vert" />
+    <None Include="assets\shaders\freetypetext.frag" />
+    <None Include="assets\shaders\freetypetext.vert" />
     <None Include="assets\shaders\texture.frag" />
     <None Include="assets\shaders\texture.vert" />
   </ItemGroup>
