<WIP> Added Cam Sorter

--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -214,6 +214,9 @@
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\opengltextrenderer.cpp">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\Renderer\scenecamsorter.cpp">
+      <Filter>src\FlexEngine\Renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -410,6 +413,9 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\opengltextrenderer.h">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\Renderer\scenecamsorter.h">
+      <Filter>src\FlexEngine\Renderer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
