--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -54,29 +54,27 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene]
-Pos=632,37
-Size=362,519
+Pos=277,37
+Size=717,519
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000005,0
 
 [Window][Game]
 Pos=277,37
-Size=353,519
+Size=717,519
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000005,1
 
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=375,71 Size=1280,713 Split=X Selected=0xE192E354
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=994,713 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=275,713 Selected=0x2E9237F7
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1003,713 Split=Y Selected=0xE192E354
-      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=717,519 Split=X Selected=0xE192E354
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=353,519 Selected=0x26816F31
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=362,519 CentralNode=1 Selected=0xE192E354
-      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=717,192 Selected=0xD44407B5
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=284,713 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X Selected=0xE192E354
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=994,713 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=275,713 Selected=0x2E9237F7
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=717,713 Split=Y Selected=0xE192E354
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=717,519 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=717,192 Selected=0xD44407B5
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=284,713 Selected=0xE7039252
 
