--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -65,12 +65,17 @@ Size=717,359
 Collapsed=0
 DockId=0x00000005,1
 
+[Window][Profiler]
+Pos=60,60
+Size=368,182
+Collapsed=0
+
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X Selected=0xE192E354
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,201 Size=1280,713 Split=X Selected=0xE192E354
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=994,713 Split=X
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=275,713 Selected=0x2E9237F7
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1003,713 Split=Y Selected=0xE192E354
