<Update> Basic Animation is done

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=277,398
-Size=717,352
+Pos=277,670
+Size=956,80
 Collapsed=0
 DockId=0x00000006,1
 
@@ -31,14 +31,14 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=996,37
-Size=284,713
+Pos=1235,37
+Size=45,713
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Tools]
-Pos=277,398
-Size=717,352
+Pos=277,670
+Size=956,80
 Collapsed=0
 DockId=0x00000006,2
 
@@ -48,25 +48,25 @@ Size=430,450
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=277,398
-Size=717,352
+Pos=277,670
+Size=956,80
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene]
 Pos=277,37
-Size=717,359
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Game]
-Pos=277,37
-Size=717,359
+Size=956,631
 Collapsed=0
 DockId=0x00000005,1
 
+[Window][Game]
+Pos=277,37
+Size=956,631
+Collapsed=0
+DockId=0x00000005,0
+
 [Window][Profiler]
-Pos=448,422
+Pos=695,444
 Size=368,182
 Collapsed=0
 
@@ -75,11 +75,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X Selected=0xE192E354
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=994,713 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=263,92 Size=1280,713 Split=X Selected=0xE192E354
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1233,713 Split=X
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=275,713 Selected=0x2E9237F7
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1003,713 Split=Y Selected=0xE192E354
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=717,359 CentralNode=1 Selected=0x26816F31
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=717,352 Selected=0xD44407B5
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=284,713 Selected=0xE7039252
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=956,713 Split=Y Selected=0xE192E354
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=717,631 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=717,80 Selected=0xD44407B5
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=45,713 Selected=0xE7039252
 
