<Add> More text to scene, and default text

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -66,7 +66,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Profiler]
-Pos=695,444
+ViewportPos=230,764
+ViewportId=0x0541D7F0
 Size=368,182
 Collapsed=0
 
@@ -75,11 +76,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=263,92 Size=1280,713 Split=X Selected=0xE192E354
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X Selected=0xE192E354
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1233,713 Split=X
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=275,713 Selected=0x2E9237F7
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=956,713 Split=Y Selected=0xE192E354
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=717,631 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=717,631 CentralNode=1 Selected=0x26816F31
       DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=717,80 Selected=0xD44407B5
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=45,713 Selected=0xE7039252
 
