--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -204,12 +204,15 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="src\FlexEngine\Reflection\primitives.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\buffer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\DebugRenderer\debugrenderer.cpp" />
+    <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglbatchhandler.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglbuffer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\opengldebugrenderer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglfont.cpp" />
+    <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglframebuffer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglmaterial.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglmesh.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglmodel.cpp" />
+    <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglpostprocessing.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglrenderer.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglshader.cpp" />
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglspriterenderer.cpp" />
@@ -274,12 +277,15 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\Renderer\alphabetstorage.h" />
     <ClInclude Include="src\FlexEngine\Renderer\buffer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\DebugRenderer\debugrenderer.h" />
+    <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglbatchhandler.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglbuffer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\opengldebugrenderer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglfont.h" />
+    <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglframebuffer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglmaterial.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglmesh.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglmodel.h" />
+    <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglpostprocessing.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglrenderer.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglshader.h" />
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglspriterenderer.h" />
