--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -54,16 +54,16 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Scene]
-Pos=252,37
+ViewportPos=76,663
+ViewportId=0x18B8C0DE
 Size=742,468
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Game]
-Pos=252,37
+ViewportPos=1065,494
+ViewportId=0x83199EB2
 Size=742,468
 Collapsed=0
-DockId=0x00000002,1
 
 [Window][Profiler]
 Pos=0,507
@@ -76,7 +76,7 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=318,201 Size=1280,713 Split=Y
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=321,201 Size=1280,713 Split=Y
   DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1280,468 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=994,713 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=250,713 Selected=0x2E9237F7
