--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -295,6 +295,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\StateManager\statemanager.h" />
     <ClInclude Include="src\FlexEngine\timer.h" />
     <ClInclude Include="src\FlexEngine\uuid.h" />
+    <ClInclude Include="src\FlexEngine\windowsizes.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\ansi_color.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\assimp.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\flexbase64.h" />
