--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -435,6 +435,9 @@
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglpostprocessing.h">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
     </ClInclude>
+    <ClInclude Include="src\FlexEngine\windowsizes.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\FlexEngine\FlexECS\entity.inl">
